Fix text overflow, & make embed & iframe global

--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ address { letter-spacing: 1px; margin: 20px 0; }
 .tiktok-embed iframe { background: #000 !important; padding: 0 !important; margin: 0 !important; border-radius: 0 !important; max-width: 100% !important;}
 .tiktok-embed::after,
 .tiktok-embed::before { content: "" }
+embed,
+iframe { width: 100% !important; }
  
 /* Typography
 ----------------------------------------------------------- */
@@ -193,7 +195,7 @@ a:focus { outline: 0 }
 .single-post-meta strong { font-weight: 600; color: #111; }
 .single-post-meta li:last-child { margin-right: 0; padding-right: 0; background: none; }
 .single-post-meta-divider:not(:last-child)::after {content: "|"; margin-left: 5px;}
-.inner-post iframe { width: 100%; }
+.inner-post p { overflow-wrap: break-word; word-break: break-all; hyphens: auto; transition: all 150ms linear 0.1ms }
 #post-tags { margin-top: 30px; white-space: wrap }
 #post-tags a { background: var(--universal-accent-color); border-radius: 2px; color: var(--universal-accent-color-text-color); font-size: 1.2em; padding: 2px 12px; }
 #post-tags a:hover { background: #111; color: #fff; text-decoration: none; }
